cmake_minimum_required(VERSION 3.27)
project(LargeInt)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)
include_directories(.ccls-cache/@@home@runner@CPlusPlus)
include_directories(.ccls-cache/@@home@runner@LargeInt)
include_directories(.ccls-cache/@home@runner@LargeInt)

add_executable(LargeInt
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@backward@binders.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@alloc_traits.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@allocator.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@basic_ios.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@basic_ios.tcc
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@basic_string.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@basic_string.tcc
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@char_traits.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@charconv.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@concept_check.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@cpp_type_traits.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@cxxabi_forced.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@cxxabi_init_exception.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@exception.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@exception_defines.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@exception_ptr.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@functexcept.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@functional_hash.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@hash_bytes.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@ios_base.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@istream.tcc
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@locale_classes.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@locale_classes.tcc
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@locale_facets.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@locale_facets.tcc
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@localefwd.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@memoryfwd.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@move.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@nested_exception.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@ostream.tcc
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@ostream_insert.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@postypes.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@predefined_ops.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@ptr_traits.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@range_access.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@std_abs.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@stl_algobase.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@stl_construct.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@stl_function.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@stl_iterator.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@stl_iterator_base_funcs.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@stl_iterator_base_types.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@stl_pair.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@streambuf.tcc
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@streambuf_iterator.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@stringfwd.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@debug@assertions.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@debug@debug.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@ext@alloc_traits.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@ext@atomicity.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@ext@new_allocator.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@ext@numeric_traits.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@ext@string_conversions.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@ext@type_traits.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@x86_64-unknown-linux-gnu@bits@atomic_word.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@x86_64-unknown-linux-gnu@bits@c++allocator.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@x86_64-unknown-linux-gnu@bits@c++config.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@x86_64-unknown-linux-gnu@bits@c++locale.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@x86_64-unknown-linux-gnu@bits@cpu_defines.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@x86_64-unknown-linux-gnu@bits@ctype_base.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@x86_64-unknown-linux-gnu@bits@ctype_inline.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@x86_64-unknown-linux-gnu@bits@error_constants.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@x86_64-unknown-linux-gnu@bits@gthr-default.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@x86_64-unknown-linux-gnu@bits@gthr.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@x86_64-unknown-linux-gnu@bits@os_defines.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@alloca.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@atomic_wide_counter.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@byteswap.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@cpu-set.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@endian.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@endianness.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@errno.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@floatn-common.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@floatn.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@libc-header-start.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@locale.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@long-double.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@pthread_stack_min-dynamic.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@pthreadtypes-arch.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@pthreadtypes.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@sched.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@select.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@setjmp.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@stdint-intn.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@stdint-uintn.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@stdio_lim.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@stdlib-float.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@struct_mutex.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@struct_rwlock.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@thread-shared-types.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@time.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@time64.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@timesize.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@timex.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@types.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@types@__FILE.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@types@__fpos64_t.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@types@__fpos_t.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@types@__locale_t.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@types@__mbstate_t.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@types@__sigset_t.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@types@clock_t.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@types@clockid_t.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@types@cookie_io_functions_t.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@types@error_t.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@types@FILE.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@types@locale_t.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@types@mbstate_t.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@types@sigset_t.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@types@struct___jmp_buf_tag.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@types@struct_FILE.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@types@struct_itimerspec.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@types@struct_sched_param.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@types@struct_timespec.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@types@struct_timeval.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@types@struct_tm.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@types@time_t.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@types@timer_t.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@types@wint_t.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@typesizes.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@uintn-identity.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@waitflags.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@waitstatus.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@wchar.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@wctype-wchar.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@wordsize.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@ctype.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@endian.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@errno.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@features-time64.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@features.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@gnu@stubs-64.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@gnu@stubs.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@locale.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@pthread.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@sched.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@stdc-predef.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@stdint.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@stdio.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@stdlib.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@sys@cdefs.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@sys@select.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@sys@single_threaded.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@sys@types.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@time.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@wchar.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@wctype.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@i38jcxrwa4fxk2b7acxircpi399kyixw-linux-headers-6.0@include@asm-generic@errno-base.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@i38jcxrwa4fxk2b7acxircpi399kyixw-linux-headers-6.0@include@asm-generic@errno.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@i38jcxrwa4fxk2b7acxircpi399kyixw-linux-headers-6.0@include@asm@errno.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@i38jcxrwa4fxk2b7acxircpi399kyixw-linux-headers-6.0@include@linux@errno.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@lhdb04f0by4qnvhhwbk64zpm70fw5piy-clang-14.0.6-lib@lib@clang@14.0.6@include@__stddef_max_align_t.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@lhdb04f0by4qnvhhwbk64zpm70fw5piy-clang-14.0.6-lib@lib@clang@14.0.6@include@stdarg.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@lhdb04f0by4qnvhhwbk64zpm70fw5piy-clang-14.0.6-lib@lib@clang@14.0.6@include@stddef.h
        .ccls-cache/@@home@runner@CPlusPlus/@nix@store@lhdb04f0by4qnvhhwbk64zpm70fw5piy-clang-14.0.6-lib@lib@clang@14.0.6@include@stdint.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@backward@binders.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@algorithmfwd.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@alloc_traits.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@allocator.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@basic_ios.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@basic_ios.tcc
        .ccls-cache/@@home@runner@LargeInt/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@basic_string.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@basic_string.tcc
        .ccls-cache/@@home@runner@LargeInt/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@char_traits.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@charconv.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@concept_check.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@cpp_type_traits.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@cxxabi_forced.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@cxxabi_init_exception.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@exception.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@exception_defines.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@exception_ptr.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@functexcept.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@functional_hash.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@hash_bytes.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@ios_base.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@istream.tcc
        .ccls-cache/@@home@runner@LargeInt/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@locale_classes.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@locale_classes.tcc
        .ccls-cache/@@home@runner@LargeInt/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@locale_facets.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@locale_facets.tcc
        .ccls-cache/@@home@runner@LargeInt/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@localefwd.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@memoryfwd.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@move.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@nested_exception.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@ostream.tcc
        .ccls-cache/@@home@runner@LargeInt/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@ostream_insert.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@postypes.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@predefined_ops.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@ptr_traits.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@range_access.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@std_abs.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@stl_algo.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@stl_algobase.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@stl_construct.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@stl_function.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@stl_heap.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@stl_iterator.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@stl_iterator_base_funcs.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@stl_iterator_base_types.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@stl_pair.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@stl_relops.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@stl_tempbuf.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@streambuf.tcc
        .ccls-cache/@@home@runner@LargeInt/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@streambuf_iterator.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@stringfwd.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@uniform_int_dist.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@debug@assertions.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@debug@debug.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@ext@alloc_traits.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@ext@atomicity.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@ext@new_allocator.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@ext@numeric_traits.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@ext@string_conversions.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@ext@type_traits.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@x86_64-unknown-linux-gnu@bits@atomic_word.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@x86_64-unknown-linux-gnu@bits@c++allocator.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@x86_64-unknown-linux-gnu@bits@c++config.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@x86_64-unknown-linux-gnu@bits@c++locale.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@x86_64-unknown-linux-gnu@bits@cpu_defines.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@x86_64-unknown-linux-gnu@bits@ctype_base.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@x86_64-unknown-linux-gnu@bits@ctype_inline.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@x86_64-unknown-linux-gnu@bits@error_constants.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@x86_64-unknown-linux-gnu@bits@gthr-default.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@x86_64-unknown-linux-gnu@bits@gthr.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@x86_64-unknown-linux-gnu@bits@os_defines.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@alloca.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@atomic_wide_counter.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@byteswap.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@cpu-set.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@endian.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@endianness.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@errno.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@floatn-common.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@floatn.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@libc-header-start.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@locale.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@long-double.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@pthread_stack_min-dynamic.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@pthreadtypes-arch.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@pthreadtypes.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@sched.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@select.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@setjmp.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@stdint-intn.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@stdint-uintn.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@stdio_lim.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@stdlib-float.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@struct_mutex.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@struct_rwlock.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@thread-shared-types.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@time.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@time64.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@timesize.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@timex.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@types.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@types@__FILE.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@types@__fpos64_t.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@types@__fpos_t.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@types@__locale_t.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@types@__mbstate_t.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@types@__sigset_t.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@types@clock_t.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@types@clockid_t.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@types@cookie_io_functions_t.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@types@error_t.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@types@FILE.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@types@locale_t.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@types@mbstate_t.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@types@sigset_t.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@types@struct___jmp_buf_tag.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@types@struct_FILE.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@types@struct_itimerspec.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@types@struct_sched_param.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@types@struct_timespec.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@types@struct_timeval.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@types@struct_tm.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@types@time_t.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@types@timer_t.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@types@wint_t.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@typesizes.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@uintn-identity.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@waitflags.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@waitstatus.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@wchar.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@wctype-wchar.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@bits@wordsize.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@ctype.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@endian.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@errno.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@features-time64.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@features.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@gnu@stubs-64.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@gnu@stubs.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@locale.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@pthread.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@sched.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@stdc-predef.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@stdint.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@stdio.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@stdlib.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@sys@cdefs.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@sys@select.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@sys@single_threaded.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@sys@types.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@time.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@wchar.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev@include@wctype.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@i38jcxrwa4fxk2b7acxircpi399kyixw-linux-headers-6.0@include@asm-generic@errno-base.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@i38jcxrwa4fxk2b7acxircpi399kyixw-linux-headers-6.0@include@asm-generic@errno.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@i38jcxrwa4fxk2b7acxircpi399kyixw-linux-headers-6.0@include@asm@errno.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@i38jcxrwa4fxk2b7acxircpi399kyixw-linux-headers-6.0@include@linux@errno.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@lhdb04f0by4qnvhhwbk64zpm70fw5piy-clang-14.0.6-lib@lib@clang@14.0.6@include@__stddef_max_align_t.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@lhdb04f0by4qnvhhwbk64zpm70fw5piy-clang-14.0.6-lib@lib@clang@14.0.6@include@stdarg.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@lhdb04f0by4qnvhhwbk64zpm70fw5piy-clang-14.0.6-lib@lib@clang@14.0.6@include@stddef.h
        .ccls-cache/@@home@runner@LargeInt/@nix@store@lhdb04f0by4qnvhhwbk64zpm70fw5piy-clang-14.0.6-lib@lib@clang@14.0.6@include@stdint.h
        .ccls-cache/@home@runner@CPlusPlus/main.cpp
        .ccls-cache/@home@runner@LargeInt/DoublyLinkedList.cpp
        .ccls-cache/@home@runner@LargeInt/DoublyLinkedList.h
        .ccls-cache/@home@runner@LargeInt/LargeInt.cpp
        .ccls-cache/@home@runner@LargeInt/LargeInt.h
        .ccls-cache/@home@runner@LargeInt/main.cpp
        DoublyLinkedList.cpp
        DoublyLinkedList.h
        LargeInt.cpp
        LargeInt.h
        main.cpp)
